[package]
name = "word-star-puzzle-solver"
version = "0.2.1"
edition = "2021"
authors = ["Mikkel Aas <aa.mikkel2902@gmail.com>"]
description = "A CLI tool for solving VGs word star puzzle"
license = "MIT"
repository = "https://github.com/MikkelAas/word-star-puzzle-solver"

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
